Fix alignment issues in IE7

--- a/cla_public/assets-src/stylesheets/design-patterns/_buttons.scss
+++ b/cla_public/assets-src/stylesheets/design-patterns/_buttons.scss
@@ -1,4 +1,4 @@
-.Button {
+@mixin cla-button() {
   @include button;
   @include border-radius(3px);
   @include core-19;
@@ -44,5 +44,16 @@
     &:active {
       color: $link-active-colour;
     }
+  }
+}
+
+.Button {
+  @include cla-button;
+}
+
+// IE7 doesn't support uppercase button class
+@include ie-lte(8) {
+  .button {
+    @include cla-button;
   }
 }
