--- a/cla_public/assets-src/stylesheets/design-patterns/_details.scss
+++ b/cla_public/assets-src/stylesheets/design-patterns/_details.scss
@@ -17,9 +17,14 @@ details {
   div {
     display: none;
     border-left: 3px solid #ccc;
+    border-bottom: 1px transparent #ccc;
     padding: 0 30px;
     margin-top: 10px;
     margin-bottom: 25px;
+
+    @include ie(7) {
+      zoom: 1;
+    }
 
     p, ul, ol {
       margin-top: 0;
