--- a/cla_public/assets-src/stylesheets/design-patterns/_errors.scss
+++ b/cla_public/assets-src/stylesheets/design-patterns/_errors.scss
@@ -70,6 +70,7 @@ $fieldset-error-bg-colour: #FDF8F5;
 }
 
 .FormBlock--grey {
+  position: relative;
   &.FieldsetError {
     background-color: $fieldset-error-bg-colour;
   }   
